--- a/package.json
+++ b/package.json
@@ -38,12 +38,8 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^24.5.2",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.9.2"
+    "tailwindcss": "^3.4.17"
   }
 }
